# DapLink-EasyFlash

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_fr.md  easy_daplink.py  install.sh  logtext.py  settings.py  start_venv.sh
.github/workflows/: ci.yaml  ci_release.yaml  release.yaml
configs/: openocd-flash.cfg  openocd-mass-erase.cfg  openocd-unlock.cfg  wb5x.cfg
src/: dirs.rs  disk_tool.rs  log_entries.rs  log_widget.rs  main.rs  main_widget.rs  messages.rs  open_ocd_task.rs  operator_tool.rs  stackfile_config.rs  utils.rs  widget.rs
src/ui/: form.rs  log_widget.rs  main_window.rs  messages.rs  mod.rs  tab_daplink.rs  tab_wireless_stack.rs
test hex/: test-l475.hex
wireless_stack/: stm32wb5xxG_BLE_HCILayer_extended_fw.hex  stm32wb5xxG_BLE_HCILayer_fw.hex  stm32wb5xxG_BLE_HCI_AdvScan_fw.hex  stm32wb5xxG_BLE_LLD_fw.hex  stm32wb5xxG_BLE_Mac_802_15_4_fw.hex  stm32wb5xxG_BLE_Stack_full_extended_fw.hex  stm32wb5xxG_BLE_Stack_full_fw.hex  stm32wb5xxG_BLE_Stack_light_fw.hex  stm32wb5xxG_BLE_Thread_dynamic_fw.hex  stm32wb5xxG_BLE_Thread_static_fw.hex  stm32wb5xxG_BLE_Zigbee_FFD_dynamic_fw.hex  stm32wb5xxG_BLE_Zigbee_FFD_static_fw.hex  stm32wb5xxG_BLE_Zigbee_RFD_dynamic_fw.hex  stm32wb5xxG_BLE_Zigbee_RFD_static_fw.hex  stm32wb5xxG_FUS_fw.hex  stm32wb5xxG_FUS_fw_for_fus_0_5_3.hex  stm32wb5xxG_Mac_802_15_4_fw.hex  stm32wb5xxG_Phy_802_15_4_fw.hex  stm32wb5xxG_Thread_FTD_fw.hex  stm32wb5xxG_Thread_MTD_fw.hex  stm32wb5xxG_Thread_RCP_fw.hex  stm32wb5xxG_Zigbee_FFD_fw.hex  stm32wb5xxG_Zigbee_RFD_fw.hex  wb55_operator.hex  wb55_operator_no_end.hex
