[package]
name = "easy_flash_daplink"
version = "0.2.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
iced = "0.13.1"
iced_aw = { version = "0.11.0", default-features = false, features = ["grid", "number_input", "tabs", "tab_bar"] }
iced_fonts = { version = "0.1.1", features = [] }
rfd = { version = "0.15.0", default-features = false, features = ["gtk3"] }
sysinfo = "0.31.4"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serialport = "4.7.1"

